[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_63.png" type="Texture" id=1]
[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_31.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/Iconic2048x2048_cropped_47.png" type="Texture" id=3]
[ext_resource path="res://src/UserInterface/IconButtons/Continoue.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/IconButtons/Menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/IconButtons/Restart.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UserInterface/PauseMenu.gd" type="Script" id=7]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTop" type="Control" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TouchScreenButton" parent="LeftTop"]
scale = Vector2( 2, 2 )
normal = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Menu"]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 148.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Menu/HBoxContainer"]
margin_right = 332.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MenuButton" parent="Menu/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 336.0
margin_right = 636.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 1
size_flags_vertical = 1
texture_normal = ExtResource( 3 )
expand = true

[node name="Control2" type="Control" parent="Menu/HBoxContainer"]
margin_left = 640.0
margin_right = 806.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RestartButton" parent="Menu/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 810.0
margin_right = 1110.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 1
size_flags_vertical = 1
texture_normal = ExtResource( 2 )
expand = true

[node name="Control3" type="Control" parent="Menu/HBoxContainer"]
margin_left = 1114.0
margin_right = 1280.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContinoueButton" parent="Menu/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 1284.0
margin_right = 1584.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 1
size_flags_vertical = 1
expand = true

[node name="Control4" type="Control" parent="Menu/HBoxContainer"]
margin_left = 1588.0
margin_right = 1920.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
[connection signal="pressed" from="LeftTop/PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Menu/HBoxContainer/ContinoueButton" to="." method="_on_ContinoueButton_pressed"]
